src/test/ui/regions/issue-102392.rs
fn g(f: for<'a> fn(fn(&str, &'a str))) -> bool {
    f
    //~^ ERROR mismatched types
}

fn main() {}
